.cargo/registry/src/index.crates.io-6f17d22bba15001f/rocket_codegen-0.4.11/tests/ui-fail/typed-uri-bad-type.stderr
error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:50:23
   |
50 |     uri!(simple: id = "hi");
   |                       ^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <f32 as FromUriParam<P, &'x f32>>
             <f32 as FromUriParam<P, &'x mut f32>>
             <f32 as FromUriParam<P, f32>>
             <f64 as FromUriParam<P, &'x f64>>
             <f64 as FromUriParam<P, &'x mut f64>>
             <f64 as FromUriParam<P, f64>>
             <i128 as FromUriParam<P, &'x i128>>
             <i128 as FromUriParam<P, &'x mut i128>>
           and 34 others

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:53:18
   |
53 |     uri!(simple: "hello");
   |                  ^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <f32 as FromUriParam<P, &'x f32>>
             <f32 as FromUriParam<P, &'x mut f32>>
             <f32 as FromUriParam<P, f32>>
             <f64 as FromUriParam<P, &'x f64>>
             <f64 as FromUriParam<P, &'x mut f64>>
             <f64 as FromUriParam<P, f64>>
             <i128 as FromUriParam<P, &'x i128>>
             <i128 as FromUriParam<P, &'x mut i128>>
           and 34 others

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, i64>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:56:23
   |
56 |     uri!(simple: id = 239239i64);
   |                       ^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, i64>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <f32 as FromUriParam<P, &'x f32>>
             <f32 as FromUriParam<P, &'x mut f32>>
             <f32 as FromUriParam<P, f32>>
             <f64 as FromUriParam<P, &'x f64>>
             <f64 as FromUriParam<P, &'x mut f64>>
             <f64 as FromUriParam<P, f64>>
             <i128 as FromUriParam<P, &'x i128>>
             <i128 as FromUriParam<P, &'x mut i128>>
           and 34 others

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Path, _>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:59:31
   |
59 |     uri!(not_uri_display: 10, S);
   |                               ^ the trait `FromUriParam<rocket::http::uri::Path, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a RawStr as FromUriParam<P, &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut std::string::String>>
             <&'a RawStr as FromUriParam<P, &'x std::string::String>>
             <&'a RawStr as FromUriParam<P, std::string::String>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'x &'a std::path::Path>>
           and 88 others

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::Path, Option<{integer}>>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:65:26
   |
65 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                          ^^^^ the trait `FromUriParam<rocket::http::uri::Path, Option<{integer}>>` is not implemented for `i32`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <f32 as FromUriParam<P, &'x f32>>
             <f32 as FromUriParam<P, &'x mut f32>>
             <f32 as FromUriParam<P, f32>>
             <f64 as FromUriParam<P, &'x f64>>
             <f64 as FromUriParam<P, &'x mut f64>>
             <f64 as FromUriParam<P, f64>>
             <i128 as FromUriParam<P, &'x i128>>
             <i128 as FromUriParam<P, &'x mut i128>>
           and 34 others
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, Option<{integer}>>` for `Option<i32>`

error[E0277]: the trait bound `std::string::String: FromUriParam<rocket::http::uri::Path, Result<_, _>>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:65:43
   |
65 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                                           ^^ the trait `FromUriParam<rocket::http::uri::Path, Result<_, _>>` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a str as FromUriParam<P, &'a str>>
             <&'a str as FromUriParam<P, &'x &'a str>>
             <&'a str as FromUriParam<P, &'x mut &'a str>>
             <&'a str as FromUriParam<P, &'x mut std::string::String>>
             <&'a str as FromUriParam<P, &'x std::string::String>>
             <&'a str as FromUriParam<P, std::string::String>>
             <std::string::String as FromUriParam<P, &'a str>>
             <std::string::String as FromUriParam<P, &'x &'a str>>
           and 4 others
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, Result<_, _>>` for `Result<std::string::String, &RawStr>`

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:69:20
   |
69 |     uri!(simple_q: "hi");
   |                    ^^^^ the trait `FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <f32 as FromUriParam<P, &'x f32>>
             <f32 as FromUriParam<P, &'x mut f32>>
             <f32 as FromUriParam<P, f32>>
             <f64 as FromUriParam<P, &'x f64>>
             <f64 as FromUriParam<P, &'x mut f64>>
             <f64 as FromUriParam<P, f64>>
             <i128 as FromUriParam<P, &'x i128>>
             <i128 as FromUriParam<P, &'x mut i128>>
           and 34 others

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:72:25
   |
72 |     uri!(simple_q: id = "hi");
   |                         ^^^^ the trait `FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <f32 as FromUriParam<P, &'x f32>>
             <f32 as FromUriParam<P, &'x mut f32>>
             <f32 as FromUriParam<P, f32>>
             <f64 as FromUriParam<P, &'x f64>>
             <f64 as FromUriParam<P, &'x mut f64>>
             <f64 as FromUriParam<P, f64>>
             <i128 as FromUriParam<P, &'x i128>>
             <i128 as FromUriParam<P, &'x mut i128>>
           and 34 others

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:75:24
   |
75 |     uri!(other_q: 100, S);
   |                        ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a RawStr as FromUriParam<P, &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut std::string::String>>
             <&'a RawStr as FromUriParam<P, &'x std::string::String>>
             <&'a RawStr as FromUriParam<P, std::string::String>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'x &'a std::path::Path>>
           and 88 others

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:78:26
   |
78 |     uri!(other_q: rest = S, id = 100);
   |                          ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a RawStr as FromUriParam<P, &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut std::string::String>>
             <&'a RawStr as FromUriParam<P, &'x std::string::String>>
             <&'a RawStr as FromUriParam<P, std::string::String>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'x &'a std::path::Path>>
           and 88 others

error[E0277]: the trait bound `S: Ignorable<rocket::http::uri::Query>` is not satisfied
   --> tests/ui-fail/typed-uri-bad-type.rs:42:29
    |
42  | fn other_q(id: usize, rest: S) {  }
    |                             ^ the trait `Ignorable<rocket::http::uri::Query>` is not implemented for `S`
...
81  |     uri!(other_q: rest = _, id = 100);
    |     --------------------------------- in this macro invocation
    |
    = help: the following other types implement trait `Ignorable<P>`:
              Option<T>
              Result<T, E>
note: required by a bound in `assert_ignorable`
   --> $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ^^^^^^^^^^^^ required by this bound in `assert_ignorable`
    = note: this error originates in the macro `rocket_uri_macro_other_q` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Ignorable<rocket::http::uri::Query>` is not satisfied
   --> tests/ui-fail/typed-uri-bad-type.rs:42:16
    |
42  | fn other_q(id: usize, rest: S) {  }
    |                ^^^^^ the trait `Ignorable<rocket::http::uri::Query>` is not implemented for `usize`
...
83  |     uri!(other_q: rest = S, id = _);
    |     ------------------------------- in this macro invocation
    |
    = help: the following other types implement trait `Ignorable<P>`:
              Option<T>
              Result<T, E>
note: required by a bound in `assert_ignorable`
   --> $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ^^^^^^^^^^^^ required by this bound in `assert_ignorable`
    = note: this error originates in the macro `rocket_uri_macro_other_q` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> tests/ui-fail/typed-uri-bad-type.rs:83:26
   |
83 |     uri!(other_q: rest = S, id = _);
   |                          ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a RawStr as FromUriParam<P, &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut &'a RawStr>>
             <&'a RawStr as FromUriParam<P, &'x mut std::string::String>>
             <&'a RawStr as FromUriParam<P, &'x std::string::String>>
             <&'a RawStr as FromUriParam<P, std::string::String>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::Path, &'x &'a std::path::Path>>
           and 88 others
